<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:padding="8dp"
    tools:context=".CalendarFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_coin"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/dark_blue">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_coin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_lvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/lvl_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/progressBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/default_round_background"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/progress_bar"
                android:progressTint="@color/dark_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_lvl"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/welcoming_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/tv_welcome"
        app:layout_constraintStart_toEndOf="@+id/tv_welcome"
        app:layout_constraintTop_toTopOf="@+id/tv_welcome" />

    <TextView
        android:id="@+id/tv_welcome_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/time_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome_time">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_check_kitty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/check_kitty"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/dark_blue" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_check_kitty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="25dp"
                app:strokeColor="@color/dark_blue">

                <ImageView
                    android:id="@+id/iv_check_kitty"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/tv_bunny_mood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@drawable/default_round_background"
                    android:padding="8dp"
                    android:text="@string/bunny_name" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_daily_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/daily_tasks"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/dark_blue" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp">

                <LinearLayout
                    android:id="@+id/ll_task_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/cl_daily_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/calendar_text_background_unselected"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_no_task"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:gravity="center"
                        android:text="@string/no_task"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/dark_blue" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_completed_tasks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/completed_tasks"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/dark_blue"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ll_completed_task_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="100dp"
                android:orientation="vertical" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>